deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pf-app
  namespace: pfinal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pf-app
  template:
    metadata:
      labels:
        app: pf-app
    spec:
      containers:
        - name: pf-app
          image: jyugar/pfinal-product-service:v1
          ports:
            - containerPort: 9095
