ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pf-ingress
  namespace: pfinal
spec:
  ingressClassName: nginx
  rules:
    - host: empresa.com
      http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: pf-service
                port:
                  number: 80
